convert events into registry, start work on advancements